--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -22,6 +22,6 @@
       <p *ngIf="blnLogado == false" >Quer jogar com a gente? Cadastre- se agora !! </p>
       <p *ngIf="blnLogado == true" >Começe jogar agora !! </p>
       <a *ngIf="blnLogado == false" class="btn btn-primary btn-lg" [routerLink]="['/login']"> Entre Aqui</a>
-      <a *ngIf="blnLogado == true" class="btn btn-primary btn-lg" [routerLink]="['/login']"> Jogar Aqui</a>
+      <a *ngIf="blnLogado == true" class="btn btn-primary btn-lg" [routerLink]="['/equipe']"> Jogar Aqui</a>
   </div>
 </section>
