--- a/src/app/jogos/jogos.component.html
+++ b/src/app/jogos/jogos.component.html
@@ -32,7 +32,8 @@
   
   <div class="col-sm-8 col-xs-8 border border-primary rounded shadow-lg p-4 mb-4 bg-white">
       <h4>Dados do Jogo</h4>
-      <form [formGroup]="jogosForm" novalidate>  
+      {{jogosForm.valid}}
+      <form [formGroup]="jogosForm" novalidate>   
         <div class="row">
           <div class="col-sm-1 col-xs-1">
               &nbsp;
@@ -41,7 +42,8 @@
               Ano:
           </div>
           <div class="col-sm-6  col-xs-6" >
-              <select name="ano" class="form-control" formControlName="ano" #filtro  (change)="FiltraCompeticao(filtro.value)">
+              <select name="ano" class="form-control" formControlName="ano" #ano (change) ="FiltraCompeticao(ano.value)"
+               [attr.disabled]="jogo.JG_JGID" >
                   <option *ngFor=  "let c of (anos)" [value]="c.ANO">{{c.ANO}}</option>
               </select>
           </div>
@@ -59,7 +61,7 @@
               Competição:
           </div>
           <div class="col-sm-6  col-xs-6" >
-              <select #JG_CPID name="JG_CPID" class="form-control" formControlName="JG_CPID" (click)="MostraRodada(JG_CPID.value)">
+              <select #JG_CPID name="JG_CPID" class="form-control" formControlName="JG_CPID" (click)="MostraRodada(JG_CPID.value)" [attr.disabled]="jogo.JG_JGID" >
                   <option *ngFor=  "let c of (competicoes)" [value]="c.CP_CPID">{{c.CP_CPDESCRICAO}}</option>
               </select>
           </div>
@@ -67,7 +69,7 @@
         <div class="row">
           <div class="col-sm-1 col-xs-1">
               &nbsp;
-          </div>
+          </div> 
         </div>
         <div class="row">
           <div class="col-sm-1 col-xs-1">
@@ -148,7 +150,7 @@
             <img src="{{imagemClube1}}" class="mr-2" style="width: 30px">
           </div>
           <div class="col-sm-3 col-xs-3 ">
-            <select name="JG_CLID1" class="form-control" formControlName="JG_CLID1" #filtroClube  (change)="FiltraClube(filtroClube.value)">
+            <select name="JG_CLID1" class="form-control" formControlName="JG_CLID1" #filtroClube  (change)="FiltraClube(filtroClube.value)" [attr.disabled]="jogo.JG_JGID" >
                 <option *ngFor=  "let c of (clubes1)" [value]="c.CL_CLID">{{c.CL_CLNOME}}</option>
             </select>
           </div>
@@ -166,12 +168,12 @@
               </cft-input>
           </div>
           <div class="col-sm-3 col-xs-3">
-            <select name="JG_CLID2" class="form-control" formControlName="JG_CLID2" #filtroClube2  (change)="FiltraClube2(filtroClube2.value)">
+            <select name="JG_CLID2" class="form-control" formControlName="JG_CLID2" #filtroClube2  (change)="FiltraClube2(filtroClube2.value)" [attr.disabled]="jogo.JG_JGID" >
                 <option *ngFor=  "let c of (clubes2)" [value]="c.CL_CLID">{{c.CL_CLNOME}}</option>
             </select>
           </div>
-          <div class="col-sm-1 col-xs-1">
-            <img src="{{imagemClube2}}" class="mr-2" style="width: 30px">
+          <div class="col-sm-1 col-xs-1" >
+            <img src="{{imagemClube2}}" class="mr-2 " style="width: 30px" >
           </div>
         </div>
       </form>
