--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,4 +1,4 @@
-{{ loginForm.valid }}
+<!-- {{ loginForm.valid }} -->
 <form [formGroup]="loginForm" novalidate>      
 	<div class="row"> 
 		<div class="col-md-12  col-xs-12">&nbsp;  </div>
