--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -19,9 +19,10 @@
 <section class="content">
   <div  class="jumbotron welcome-jumbotron" style="height: 600px;">
       <h1>Bem vindo ao Chutes FutMesa!</h1>
-      <p *ngIf="blnLogado == false" >Quer jogar com a gente? Cadastre- se agora !! </p>
+      <h1>O site de inscrição da Federação Paulista de Futebol de Mesa!</h1>
+      <!-- <p *ngIf="blnLogado == false" >Quer jogar com a gente? Cadastre- se agora !! </p>
       <p *ngIf="blnLogado == true" >Começe jogar agora !! </p>
       <a *ngIf="blnLogado == false" class="btn btn-primary btn-lg" [routerLink]="['/login']"> Entre Aqui</a>
-      <a *ngIf="blnLogado == true" class="btn btn-primary btn-lg" [routerLink]="['/equipe']"> Jogar Aqui</a>
+      <a *ngIf="blnLogado == true" class="btn btn-primary btn-lg" [routerLink]="['/equipe']"> Jogar Aqui</a> -->
   </div>
 </section>
