--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -8,10 +8,11 @@
 		<div class="col-md-4  col-xs-4 jumbotron " style="height: 80%;">
 			<div class="row">
 				<div class="col-md-12  col-xs-12 ">
-					<h3>Entre no Cartola FutMesa</h3>
+					<!-- <h3>Entre no Cartola FutMesa</h3> -->
+					<h3>Sistema de Inscrição FPFM</h3>
 				</div>
 			</div>
-			<div class="row">
+			<!-- <div class="row">
 				<div class="col-md-12  col-xs-12 ">
 					<button type="button" class="btn btn-primary btn-face btn-block">
 						<i class="fa fa-facebook-official"></i> Facebook
@@ -26,7 +27,7 @@
 						Google
 					</button>
 				</div>
-			</div>
+			</div> -->
 			<div class="row">
 				<div class="col-md-12  col-xs-12">&nbsp;  </div>
 			</div>
@@ -64,7 +65,7 @@
 				</div>
 			</div>
 			
-			<div class="row">
+			<!-- <div class="row">
 				<div class="col-md-9 col-xs-9" style="margin-left: 15px; cursor: pointer; ">
 					<a (click)="ResetSenha()"  >Esqueceu a senha</a>
 				</div>
@@ -77,7 +78,7 @@
 						<i class="fa fa-user"></i> Cadastre-se
 					</button>
 				</div>
-			</div>
+			</div> -->
 		</div>
 		<div class="col-md-5 col-xs-5">&nbsp; </div>
 	</div>
